--- a/web-static/2-index.html
+++ b/web-static/2-index.html
@@ -1,9 +1,9 @@
 <!Doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles/2-common.css">
-    <link rel="stylesheet" href="styles/2-header.css">
-    <link rel="stylesheet" href="styles/2-footer.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
   </head>
   <title>AirBnB_Clone</title>
   <body>
