--- a/web-static/3-index.html
+++ b/web-static/3-index.html
@@ -4,12 +4,12 @@
     <link rel="stylesheet" type="text/css" href="styles/2-common.css">
     <link rel="stylesheet" type="text/css" href="styles/2-header.css">
     <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
-    <link rel="icon" type="image/x-icon" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon.png"
+    <link rel="icon" type="image/x-icon" href="images/icon.png"
   </head>
   <title>AirBnB_Clone</title>
   <body>
     <header>
-      <img class="logo" href="https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/logo.png">
+      <div class="logo">HBnB</div>
     </header>
     <footer>
       <p>Best School</p>
