fix url in 3-header.css

--- a/web-static/3-index.html
+++ b/web-static/3-index.html
@@ -4,12 +4,12 @@
     <link rel="stylesheet" type="text/css" href="styles/2-common.css">
     <link rel="stylesheet" type="text/css" href="styles/2-header.css">
     <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
-    <link rel="icon" type="image/x-icon" href="images/icon.png"
+    <link rel="icon" type="image/x-icon" href="images/icon.png">
   </head>
-  <title>AirBnB_Clone</title>
+  <title>HBnB</title>
   <body>
     <header>
-      <div class="logo">HBnB</div>
+      <div class="logo"></div>
     </header>
     <footer>
       <p>Best School</p>
