update the search button

--- a/web-static/4-index.html
+++ b/web-static/4-index.html
@@ -14,8 +14,8 @@
     </header>
     <div class="container">
       <section class="filters">
-          <button>Search</button>
-       </section>
+          <button type="button">Search</button>
+      </section>
     </div>
     <footer>
       <p>Best School</p>
