fix html structure

--- a/web-static/5-index.html
+++ b/web-static/5-index.html
@@ -16,12 +16,12 @@
       <section class="filters">
           <button>Search</button>
           <div class="locations">
-            <h3 class="filters">States</h3>
-            <h4 class="filters">text with fake contents</h4>
+            <h3>States</h3>
+            <h4>text with fake contents</h4>
           </div>
           <div class="amenities">
-            <h3 class="filters">Amenities</h3>
-            <h4 class="filters"> text with fake contents</h4>
+            <h3>Amenities</h3>
+            <h4> text with fake contents</h4>
           </div>
        </section>
     </div>
