--- a/web-static/7-index.html
+++ b/web-static/7-index.html
@@ -66,7 +66,7 @@
        <section class="places">
         <h1>Places</h1>
         <article>
-            <h2>Accra</h2>
+            <h2>House</h2>
         </article>
         <article>
             <h2>Ahafo</h2>
